--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,11 @@
 			"homepage": "https://github.com/ProjetPP"
 		}
 	],
+	"minimum-stability": "dev",
+	"prefer-stable": true,
 	"require": {
 		"php": ">=5.3.0",
+		"addwiki/wikibase-api": "~0.2",
 		"ppp/data-model": "*"
 	},
 	"autoload": {
