--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,7 +1,6 @@
 inherit: true
 
 tools:
-    php_code_coverage: true
     php_code_sniffer: true
     php_cpd: true
     php_cs_fixer: true
@@ -10,3 +9,5 @@ tools:
     php_pdepend: true
     php_analyzer: true
     sensiolabs_security_checker: true
+    external_code_coverage:
+        timeout: 1000
