--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	"require": {
 		"php": ">=5.3.0",
 		"addwiki/wikibase-api": "~0.2",
-		"ppp/data-model": "*"
+		"ppp/data-model": "*",
+		"ppp/wikidataquery-api": "*"
 	},
 	"autoload": {
 		"psr-4": {
