--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"php": ">=5.3.0",
 		"addwiki/wikibase-api": "~0.2",
 		"ppp/data-model": "*",
-		"ppp/wikidataquery-api": "*"
+		"ppp/wikidataquery-api": "*",
+		"ppp/libmodule": "*"
 	},
 	"autoload": {
 		"psr-4": {
