--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 		"addwiki/wikibase-api": "~0.3",
 		"doctrine/cache": "~1.3",
 		"ppp/data-model": "*",
-		"ppp/wikidataquery-api": "*",
+		"ppp/wikidataquery-api": "~1.0",
 		"ppp/libmodule": "*"
 	},
 	"require-dev": {
