--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
 		"php": ">=5.3.0",
 		"addwiki/wikibase-api": "~0.3",
 		"doctrine/cache": "~1.3",
-		"ppp/data-model": "dev-normalization",
+		"ppp/data-model": "*",
 		"ppp/wikidataquery-api": "~1.0",
-		"ppp/libmodule": "dev-normalisation"
+		"ppp/libmodule": "*"
 	},
 	"require-dev": {
 		"whatthejeff/nyancat-phpunit-resultprinter": "~1.2"
