--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 	"require": {
 		"php": ">=5.3.0",
 		"addwiki/wikibase-api": "~0.3",
+		"addwiki/guzzle-mediawiki-client": "~0.1",
 		"doctrine/cache": "~1.3",
 		"ppp/data-model": "*",
 		"ppp/wikidataquery-api": "~1.0",
