--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	"prefer-stable": true,
 	"require": {
 		"php": ">=5.3.0",
-		"addwiki/wikibase-api": "~0.3",
+		"addwiki/wikibase-api": "0.4",
 		"addwiki/guzzle-mediawiki-client": "~0.1",
 		"doctrine/cache": "~1.3",
 		"ppp/data-model": "*",
