--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,9 +13,7 @@
          stopOnFailure="false"
          stopOnIncomplete="false"
          stopOnSkipped="false"
-         verbose="true"
-         printerFile="vendor/whatthejeff/nyancat-phpunit-resultprinter/src/NyanCat/PHPUnit/ResultPrinter.php"
-         printerClass="NyanCat\PHPUnit\ResultPrinter">>
+         verbose="true">
     <testsuites>
         <testsuite name="PPPWikidata">
             <directory>tests/phpunit</directory>
