--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
 	"prefer-stable": true,
 	"require": {
 		"php": ">=5.3.0",
-		"addwiki/wikibase-api": "~0.4",
-		"addwiki/guzzle-mediawiki-client": "~0.1",
+		"addwiki/mediawiki-api": "~0.3",
 		"doctrine/cache": "~1.4",
+		"ppp/wikibase-entity-store": "*",
 		"ppp/data-model": "*",
 		"ppp/wikidataquery-api": "~1.1",
 		"ppp/libmodule": "*"
