--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ services:
 
 install:
   - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - travis_retry composer self-update
   - travis_retry composer install --prefer-source
 
 script:
