--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 	"require": {
 		"php": ">=5.3.0",
 		"addwiki/mediawiki-api": "~0.3",
+		"addwiki/mediawiki-api-base": "0.1",
 		"doctrine/cache": "~1.4",
 		"ppp/wikibase-entity-store": "*",
 		"ppp/data-model": "*",
