--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,11 @@ language: php
 php:
   - 5.3
   - 5.6
+  - hhvm
 
 sudo: false
 
-services:
-  - mongodb
-
 install:
-  - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source
 
