--- a/default-config.json
+++ b/default-config.json
@@ -1,7 +1,8 @@
 {
   "backend": "api",
   "api": {
-    "url": "http://www.wikidata.org/w/api.php"
+    "url": "http://www.wikidata.org/w/api.php",
+    "wikidataquery_url": "http://wdq.wmflabs.org/api"
   },
   "cache": {
     "array": true
