--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 	"prefer-stable": true,
 	"require": {
 		"php": ">=5.3.0",
+		"wikibase/data-model": "~2.5",
 		"addwiki/mediawiki-api-base": "~0.2",
 		"doctrine/cache": "~1.4",
 		"ppp/wikibase-entity-store": "*",
