Moves to GPLv3+

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 		"ppp"
 	],
 	"homepage": "https://github.com/ProjetPP/PPP-Wikidata",
-	"license": "GPL-2.0+",
+	"license": "AGPL-3.0+",
 	"authors": [
 		{
 			"name": "Projet Pensées Profondes",
